--- a/src/components/App.css
+++ b/src/components/App.css
@@ -16,9 +16,11 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'Kabel Heavy', cursive, sans-serif;
-  overflow: hidden;
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  -webkit-text-size-adjust: 100%;
 }
 
 /* Scrollbar */
